# librarian

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  NOTICE  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
examples/: README.md  agent_tool_openai.py  quickstart.py  sql_catalog.py
src/librarian/: __init__.py  chunking.py  cli.py  config.py  connectors.py  context.py  crawl.py  enrich.py  identity.py  ingest.py  keywords.py  librarian.py  memory.py  models.py  retrieval.py  rollups.py  summarize.py  tool.py
src/librarian/catalog/: __init__.py  base.py  sqlite_catalog.py
src/librarian/embeddings/: __init__.py  base.py  hashing.py  openai_embedder.py
src/librarian/readers/: __init__.py  base.py  office.py  registry.py  text.py
src/librarian/vectorstore/: __init__.py  base.py  faiss_store.py  local_store.py
tests/: conftest.py  test_enrich.py  test_identity.py  test_librarian.py  test_memory.py  test_readers_chunking.py
